<resources>
    <string name="app_name">Chatbox</string>
    <string name="ApplicationNameE1">C</string>
    <string name="ApplicationName">Chatbox</string>
    <string name="App_Content"><![CDATA[Connect friends easily & quickly]]></string>
    <string name="About_Our_Application">Our chat app is the perfect way to stay connected with friends and family.</string>
    <string name="signup_with_email">Sign-up with email</string>
    <string name="existing_account">Existing account?</string>
    <string name="log_in">Log in</string>
    <string name="title">Log in to Chatbox</string>
    <string name="log_in_to_chatbox">Log in to Chatbox</string>
    <string name="login_title">Welcome back! Sign in using your social account or email to continue us</string>
    <string name="password_login">Password</string>
    <string name="btn_log_in">Log in</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="signup_title">Get chatting with friends and family today by signing up for our chat app!</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="messages_group_and_others">Messages, group and others</string>
    <string name="help_center_contact_us_privacy_policy">Help center,contact us,privacy policy</string>
    <string name="help">Help</string>
    <string name="storage_and_data">Storage and data</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="search_background">search_background</string>
    <string name="search_icon">search_icon</string>
    <string name="profile_picture">profile_picture</string>
    <string name="never_give_up">Never give up 💪</string>
    <string name="chat">Chat</string>
    <string name="chat_history_theme_wallpapers">Chat history,theme,wallpapers</string>
    <string name="notifications">Notifications</string>
    <string name="network_usage_storage_usage">Network usage, storage usage</string>
    <string name="mahmoud_tarek">Mahmoud Tarek</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_your_message">Write your message</string>
    <string name="user_state">User State</string>
    <string name="receive_message">receive Message</string>
    <string name="user_name">User Name</string>
    <string name="today">Today</string>
    <string name="my_status">My status</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="login">Login</string>
    <string name="_9_25_am">9:25 AM</string>
    <string name="send_message">send Message</string>
    <string name="message">Message</string>
    <string name="callsItem">Calls</string>
    <string name="contactsitem">Contacts</string>
    <string name="settingsItem">Settings</string>
    <string name="default_web_client_id">AIzaSyB1MXBQV2-bSOs-wXdJPWpx7H0q2UTs7r0</string>
    <string name="login_phone_number">ADD PHONE NUMBER</string>
    <string name="join">Join</string>
    <string name="please_enter_a_valid_number">Please Enter A Valid Number</string>
    <string name="time_out">Time Out</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="authenticated_successfully">Authenticate Successfully</string>
    <string name="authenticated_failed">Authenticate failed</string>
    <string name="invMassage">Join ChatBox for fast, secure messaging, voice messages, and group chats. Stay connected effortlessly with multimedia sharing and seamless syncing across devices. Download now and start chatting!</string>
    <string name="appLink">NotFound</string>
    <string name="Online">Online</string>
    <string name="offline">Offline</string>
    <string name="phone_number">Phone Number</string>
    <string name="nick_name">Nick Name</string>
    <string name="full_name">Full Name</string>
    <string name="bio">BIO</string>
    <string name="media_shared">Media Shared</string>
    <string name="view_all">View All</string>
</resources>