<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signup.SignupActivity">

    <ImageView
        android:id="@+id/backArrowIcon"
        style="@style/AuthIconStyle"
        android:src="@drawable/ic_back_arrow_deep_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_greenLine_icon"
        android:layout_width="46dp"
        android:layout_height="7.9dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_fragments_line_green"
        app:layout_constraintEnd_toEndOf="@+id/signup_main_title"
        app:layout_constraintTop_toTopOf="@+id/signup_main_title" />

    <TextView
        android:id="@+id/signup_main_title"
        style="@style/AuthTitleStyle"
        android:text="@string/sign_up_with_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_SubTitle"
        style="@style/AuthSubTitleStyle"
        android:text="@string/signup_title"
        app:layout_constraintEnd_toEndOf="@+id/signup_main_title"
        app:layout_constraintStart_toStartOf="@+id/signup_main_title"
        app:layout_constraintTop_toBottomOf="@+id/signup_main_title" />

    <TextView
        android:id="@+id/signup_Name_Label"
        style="@style/AuthLabelStyle"
        android:layout_marginTop="64dp"
        android:text="@string/your_name"
        app:layout_constraintStart_toStartOf="@+id/signup_UserName_ET"
        app:layout_constraintTop_toBottomOf="@+id/signup_SubTitle" />

    <EditText
        android:id="@+id/signup_UserName_ET"
        style="@style/AuthTextFieldStyle"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_Name_Label" />

    <TextView
        style="@style/AuthLabelStyle"
        android:text="@string/your_email"
        app:layout_constraintBottom_toTopOf="@+id/signup_Email_ET"
        app:layout_constraintStart_toStartOf="@+id/signup_Email_ET" />

    <EditText
        android:id="@+id/signup_Email_ET"
        style="@style/AuthTextFieldStyle"
        android:layout_marginTop="32dp"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signup_Password_ET"
        app:layout_constraintEnd_toEndOf="@+id/signup_UserName_ET"
        app:layout_constraintStart_toStartOf="@+id/signup_UserName_ET"
        app:layout_constraintTop_toBottomOf="@+id/signup_UserName_ET" />

    <TextView
        style="@style/AuthLabelStyle"
        android:text="@string/Password"
        app:layout_constraintBottom_toTopOf="@id/signup_Password_ET"
        app:layout_constraintStart_toStartOf="@id/signup_Password_ET" />

    <EditText
        android:id="@+id/signup_Password_ET"
        style="@style/AuthTextFieldStyle"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signup_PasswordConfirm_ET"
        app:layout_constraintEnd_toEndOf="@+id/signup_Email_ET"
        app:layout_constraintStart_toStartOf="@+id/signup_Email_ET"
        app:layout_constraintTop_toBottomOf="@+id/signup_Email_ET" />

    <TextView
        style="@style/AuthLabelStyle"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@id/signup_PasswordConfirm_ET"
        app:layout_constraintStart_toStartOf="@id/signup_PasswordConfirm_ET" />

    <EditText
        android:id="@+id/signup_PasswordConfirm_ET"
        style="@style/AuthTextFieldStyle"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signup_Password_ET"
        app:layout_constraintStart_toStartOf="@+id/signup_Password_ET"
        app:layout_constraintTop_toBottomOf="@+id/signup_Password_ET" />

    <Button
        android:id="@+id/btn_create_an_account"
        style="@style/AuthButtonStyle"
        android:layout_marginBottom="64dp"
        android:text="@string/create_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
