<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".auth.login.LoginActivity">

    <ImageView
        android:id="@+id/backArrowIcon"
        style="@style/AuthIconStyle"
        android:src="@drawable/ic_back_arrow_deep_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_greenLine_icon"
        android:layout_width="52dp"
        android:layout_height="7.9dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="1dp"
        android:src="@drawable/ic_fragments_line_green"
        app:layout_constraintStart_toStartOf="@id/login_mainTitle"
        app:layout_constraintTop_toTopOf="@id/login_mainTitle" />

    <TextView
        android:id="@+id/login_mainTitle"
        style="@style/AuthTitleStyle"
        android:text="@string/log_in_to_chatbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_SubTitle"
        style="@style/AuthSubTitleStyle"
        android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="@id/login_mainTitle"
        app:layout_constraintEnd_toEndOf="@id/login_mainTitle"
        app:layout_constraintTop_toBottomOf="@id/login_mainTitle" />

    <ImageView
        android:id="@+id/login_facebook_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_logo_facebook_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_google_icon"
        app:layout_constraintTop_toBottomOf="@id/login_SubTitle"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <ImageView
        android:id="@+id/login_google_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_google_white"
        app:layout_constraintStart_toEndOf="@id/login_facebook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_facebook_icon"
        app:layout_constraintBottom_toBottomOf="@id/login_facebook_icon"
        app:layout_constraintHorizontal_bias="0.5" />

    <View
        android:id="@+id/login_dividerLine1"
        android:layout_width="132dp"
        android:layout_height="2dp"
        android:background="@color/secondaryGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_or_Text"
        app:layout_constraintTop_toTopOf="@id/login_or_Text"
        app:layout_constraintBottom_toBottomOf="@id/login_or_Text" />

    <TextView
        android:id="@+id/login_or_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:letterSpacing="0.1"
        android:text="@string/or"
        android:textColor="@color/secondaryGray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/login_dividerLine1"
        app:layout_constraintEnd_toStartOf="@id/login_dividerLine2"
        app:layout_constraintTop_toBottomOf="@id/login_facebook_icon" />

    <View
        android:id="@+id/login_dividerLine2"
        android:layout_width="132dp"
        android:layout_height="2dp"
        android:background="@color/secondaryGray"
        app:layout_constraintStart_toEndOf="@id/login_or_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_or_Text"
        app:layout_constraintBottom_toBottomOf="@id/login_or_Text" />

    <TextView
        android:id="@+id/login_email_TextView"
        style="@style/AuthLabelStyle"
        android:layout_marginTop="48dp"
        android:text="@string/your_email"
        app:layout_constraintStart_toStartOf="@id/login_Email_editText"
        app:layout_constraintTop_toBottomOf="@id/login_or_Text" />

    <EditText
        android:id="@+id/login_Email_editText"
        style="@style/AuthTextFieldStyle"
        android:layout_marginTop="4dp"
        android:inputType="textWebEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_TextView" />

    <TextView
        style="@style/AuthLabelStyle"
        android:layout_margin="4dp"
        android:text="@string/password_login"
        app:layout_constraintStart_toStartOf="@id/login_pw_editText"
        app:layout_constraintBottom_toTopOf="@id/login_pw_editText" />

    <EditText
        android:id="@+id/login_pw_editText"
        style="@style/AuthTextFieldStyle"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/login_Email_editText"
        app:layout_constraintEnd_toEndOf="@id/login_Email_editText"
        app:layout_constraintTop_toBottomOf="@id/login_Email_editText" />

    <Button
        android:id="@+id/login_Button"
        style="@style/AuthButtonStyle"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_forgot_password" />

    <TextView
        android:id="@+id/login_forgot_password"
        style="@style/AuthLabelStyle"
        android:layout_marginBottom="24dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
