<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.startupActivity.StartupActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_onboarding_startup">

    <TextView
        android:id="@+id/ApplicationName_E1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ApplicationNameE1"
        android:fontFamily="@font/arturo"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ApplicationName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ApplicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std"
        android:text="@string/ApplicationName"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ApplicationName_E1"
        app:layout_constraintBottom_toBottomOf="@id/ApplicationName_E1"
        app:layout_constraintTop_toTopOf="@id/ApplicationName_E1" />

    <TextView
        android:id="@+id/ApplicationContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/App_Content"
        android:fontFamily="@font/caros_font"

        android:textColor="@color/white"
        android:textSize="68sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="13dp"
        android:lineHeight="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ApplicationName_E1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/About_Our_Application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std"
        android:text="@string/About_Our_Application"
        android:textColor="@color/Startup_Second_Color"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="64dp"
        android:lineHeight="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ApplicationContent" />

    <ImageView
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_facebook"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_bg_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/google_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/About_Our_Application" />

    <ImageView
        android:id="@+id/google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_logo_google"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_bg_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/facebook_login"
        app:layout_constraintTop_toBottomOf="@id/About_Our_Application" />

    <View
        android:id="@+id/login_dividerLine1"
        android:layout_width="132dp"
        android:layout_height="2dp"
        android:background="@color/secondaryGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/startup_or_Text"
        app:layout_constraintTop_toTopOf="@id/startup_or_Text"
        app:layout_constraintBottom_toBottomOf="@id/startup_or_Text" />

    <TextView
        android:id="@+id/startup_or_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:letterSpacing="0.1"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/login_dividerLine1"
        app:layout_constraintEnd_toStartOf="@id/login_dividerLine2"
        app:layout_constraintTop_toBottomOf="@id/facebook_login" />

    <View
        android:id="@+id/login_dividerLine2"
        android:layout_width="132dp"
        android:layout_height="2dp"
        android:background="@color/secondaryGray"
        app:layout_constraintStart_toEndOf="@id/startup_or_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/startup_or_Text"
        app:layout_constraintBottom_toBottomOf="@id/startup_or_Text" />

    <Button
        android:id="@+id/Btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_with_email"
        android:textColor="@drawable/selector_button_startup_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startup_or_Text"
        app:layout_constraintBottom_toTopOf="@id/Existing_account"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        style="@style/MyButtonStyle" />

    <TextView
        android:id="@+id/Existing_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_account"
        android:textSize="16sp"
        android:textColor="@color/Startup_Second_Color"
        android:fontFamily="@font/circular_std"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/Btn_SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/LogIn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/circular_std"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@drawable/selector_text_startup_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/Existing_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Existing_account"
        app:layout_constraintTop_toTopOf="@id/Existing_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
